Change gamesPost to ensure game code is unique
